--- a/app/module/_video-play/_video-play.scss
+++ b/app/module/_video-play/_video-play.scss
@@ -2,6 +2,7 @@
   background-image: url(../images/top-slider.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
   height: 500px;
   margin-bottom: 110px;
 
@@ -11,5 +12,33 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+
+@media (max-width: 870px){
+  .video-play{
+    height: 400px;
+    margin-bottom: 60px;
+    &__popup{
+      height: 400px;
+    }
+  }
+}
+
+@media (max-width: 600px){
+  .video-play{
+    height: 300px;
+    &__popup{
+      height: 300px;
+    }
+  }
+}
+
+@media (max-width: 400px){
+  .video-play{
+    height: 200px;
+    &__popup{
+      height: 200px;
+    }
   }
 }
