--- a/app/module/_partners/_partners.scss
+++ b/app/module/_partners/_partners.scss
@@ -9,5 +9,40 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+  }
+  
+}
+
+@media (max-width: 870px){
+  .partners{
+    &__list-item {
+      margin: 10px 45px;
+    }
+  }
+}
+
+@media (max-width: 678px){
+  .partners{
+    padding: 20px 0;
+    &__list-item {
+      margin: 10px 21px;
+    }
+  }
+}
+
+@media (max-width: 530px){
+  .partners{
+    &__list-item {
+      margin: 10px 5px;
+    }
+  }
+}
+
+@media (max-width: 400px){
+  .partners{
+    &__list-item {
+      margin: 10px 10px;
+    }
   }
 }
