--- a/app/about-us.njk
+++ b/app/about-us.njk
@@ -6,68 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Glee | Главная</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/about-us.min.css">
 </head>
 
 <body>
 
-  <header class="header">
-    <div class="container-lg container">
-      <div class="header__inner">
-        <a class="logo" href="">
-          <img class="logo__img" src="images/logo.png" alt="logo">
-        </a>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__list-item">
-              <a class="menu__list-link menu__list-link--active" href="#">Home +</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">About</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Services</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Pages +</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">News</a>
-            </li>
-            <li class="menu__list-item">
-              <a class="menu__list-link" href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="user-nav">
-
-          <div class="user-nav__inner-search">
-            <a class="user-nav__link" href="#">
-              <img class="user-nav__link-img" src="images/icons/search.svg" alt="user icon">
-            </a>
-          </div>
-
-          <div class="user-nav__inner-shop">
-            <a class="user-nav__link" href="#">
-              <img class="user-nav__link-img" src="images/icons/heart.svg" alt="user icon">
-              <span class="user-nav__num">0</span>
-            </a>
-            <div class="user-nav__shop-line"></div>
-            <a class="user-nav__link" href="#">
-              <img class="user-nav__link-img" src="images/icons/cart.svg" alt="user icon">
-              <span class="user-nav__num">0</span>
-            </a>
-          </div>
-
-          <div class="user-nav__inner-dots">
-            <a class="user-nav__link" href="#">
-              <img class="user-nav__link-img" src="images/icons/user.svg" alt="user icon">
-            </a>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </header>
+  {% include 'app/module/_header/_header.html' %}
 
   <main class="main">
     <section class="top">
@@ -107,6 +51,7 @@
               irure dolor in reprehenderit in voluptate velit esse cillum
             </p>
             <ul class="promo__num-list">
+            <li class="promo__num-box">
               <div class="promo__num-img">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36.41" height="37.719" viewBox="0 0 36.41 37.719">
                   <defs>
@@ -122,10 +67,12 @@
                     transform="translate(-992 -921.25)" />
                 </svg>
               </div>
-              <li class="promo__num-item">
+              <div class="promo__num-item">
                 520+
                 <p>Projects</p>
-              </li>
+              </div>
+            </li>
+            <li class="promo__num-box">
               <div class="promo__num-img">
                 <svg xmlns="http://www.w3.org/2000/svg" width="43.12" height="39.094" viewBox="0 0 43.12 39.094">
                   <defs>
@@ -141,10 +88,12 @@
                     transform="translate(-1190 -920.344)" />
                 </svg>
               </div>
-              <li class="promo__num-item">
+              <div class="promo__num-item">
                 $4M
                 <p>Revenue</p>
-              </li>
+              </div>
+            </li>
+            <li class="promo__num-box">
               <div class="promo__num-img">
                 <svg xmlns="http://www.w3.org/2000/svg" width="41.78" height="40.406" viewBox="0 0 41.78 40.406">
                   <defs>
@@ -160,10 +109,11 @@
                     transform="translate(-1387.34 -919.75)" />
                 </svg>
               </div>
-              <li class="promo__num-item">
+              <div class="promo__num-item">
                 250
                 <p>Awards</p>
-              </li>
+              </div>
+            </li>
             </ul>
           </div>
         </div>
@@ -273,212 +223,49 @@
           <div class="team__items">
             <div class="team__item">
               <img class="team__item-img" src="images/team/1.jpg" alt="team img">
+              <div class="team__item-box">
               <h5 class="team__item-title">Eliza Elliot</h5>
               <p class="team__item-subtitle">Commodo tempor</p>
               <a class="team__item-link--instagram" href="#"></a>
               <a class="team__item-link--google" href="#"></a>
+              </div>
             </div>
             <div class="team__item">
               <img class="team__item-img" src="images/team/2.jpg" alt="team img">
+              <div class="team__item-box">
               <h5 class="team__item-title">Roscoe A.</h5>
               <p class="team__item-subtitle">Commodo tempor</p>
               <a class="team__item-link--instagram" href="#"></a>
               <a class="team__item-link--google" href="#"></a>
+              </div>
             </div>
             <div class="team__item">
               <img class="team__item-img" src="images/team/3.jpg" alt="team img">
+              <div class="team__item-box">         
               <h5 class="team__item-title">Ruby M.</h5>
               <p class="team__item-subtitle">Commodo tempor</p>
               <a class="team__item-link--instagram" href="#"></a>
               <a class="team__item-link--google" href="#"></a>
+              </div>
             </div>
             <div class="team__item">
               <img class="team__item-img" src="images/team/4.jpg" alt="team img">
+              <div class="team__item-box">
               <h5 class="team__item-title">Marie F. Blossg</h5>
               <p class="team__item-subtitle">Commodo tempor</p>
               <a class="team__item-link--instagram" href="#"></a>
               <a class="team__item-link--google" href="#"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="article">
-      <div class="container">
-        <div class="article__inner">
-          <div class="article__top">
-            <h2 class="title article__title">Our Insights & Articles</h2>
-            <a class="article__link" href="#">
-              View All
-              <svg width="7px" height="12px">
-                <path fill-rule="evenodd" fill="rgb(38, 38, 38)"
-                  d="M1.333,11.687 C1.184,11.687 1.034,11.626 0.922,11.504 C0.819,11.390 0.767,11.245 0.767,11.100 C0.767,10.943 0.826,10.789 0.944,10.673 L5.491,6.198 L0.944,1.724 C0.826,1.609 0.767,1.453 0.767,1.297 C0.767,1.152 0.819,1.007 0.922,0.893 C1.138,0.657 1.496,0.647 1.723,0.870 L6.700,5.768 C6.705,5.772 6.709,5.777 6.714,5.782 C6.762,5.831 6.801,5.889 6.827,5.951 L6.827,5.951 C6.828,5.951 6.828,5.951 6.828,5.951 C6.862,6.029 6.880,6.112 6.880,6.195 C6.880,6.196 6.880,6.197 6.880,6.198 C6.880,6.284 6.862,6.369 6.827,6.447 L6.827,6.447 C6.827,6.448 6.826,6.448 6.826,6.448 C6.826,6.449 6.826,6.449 6.826,6.449 C6.826,6.449 6.826,6.449 6.826,6.450 C6.799,6.509 6.762,6.565 6.715,6.614 C6.710,6.619 6.705,6.623 6.700,6.628 L1.723,11.527 C1.614,11.635 1.473,11.687 1.333,11.687 Z" />
-              </svg>
-            </a>
-          </div>
-          <div class="article__items">
-            <div class="article-item">
-              <img class="article-item__img" src="images/article/1.jpg" alt="article icon">
-              <div class="article-item__bottom">
-                <a href="#">
-                  <p class="article-item__news">NEWS</p>
-                </a>
-                <a href="#">
-                  <p class="article-item__text">
-                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                </a>
-                <div class="article-item__info">
-                  <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
-                  <p class="article-item__data">28 JANUARY, 2020</p>
-                  <img class="article-item__icon" src="images/icons/user-article.svg" alt="article icon">
-                  <p class="article-item__user">BY ADMIN</p>
-                </div>
-              </div>
-            </div>
-            <div class="article-item">
-              <img class="article-item__img" src="images/article/2.jpg" alt="article icon">
-              <div class="article-item__bottom">
-                <a href="#">
-                  <p class="article-item__news">NEWS</p>
-                </a>
-                <a href="#">
-                  <p class="article-item__text">
-                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                </a>
-                <div class="article-item__info">
-                  <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
-                  <p class="article-item__data">28 JANUARY, 2020</p>
-                  <img class="article-item__icon" src="images/icons/user-article.svg" alt="article icon">
-                  <p class="article-item__user">BY ADMIN</p>
-                </div>
-              </div>
-            </div>
-            <div class="article-item">
-              <img class="article-item__img" src="images/article/3.jpg" alt="article icon">
-              <div class="article-item__bottom">
-                <a href="#">
-                  <p class="article-item__news">NEWS</p>
-                </a>
-                <a href="#">
-                  <p class="article-item__text">
-                    Diusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
-                  </p>
-                </a>
-                <div class="article-item__info">
-                  <img class="article-item__icon" src="images/icons/calendar.svg" alt="article icon">
-                  <p class="article-item__data">28 JANUARY, 2020</p>
-                  <img class="article-item__icon" src="images/icons/user-article.svg" alt="article icon">
-                  <p class="article-item__user">BY ADMIN</p>
-                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+    {% include 'app/module/_article/_article.html' %}
+    {% include 'app/module/_partners/_partners.html' %}
   </main>
 
-  <footer class="footer">
-    <div class="partners">
-      <div class="container">
-        <ul class="partners__list">
-          <li class="partners__list-item"><img src="images/partners/1.png" alt="partners logo"></li>
-          <li class="partners__list-item"><img src="images/partners/2.png" alt="partners logo"></li>
-          <li class="partners__list-item"><img src="images/partners/3.png" alt="partners logo"></li>
-          <li class="partners__list-item"><img src="images/partners/4.png" alt="partners logo"></li>
-          <li class="partners__list-item"><img src="images/partners/5.png" alt="partners logo"></li>
-        </ul>
-      </div>
-    </div>
-    <div class="container">
-      <div class="footer-top">
-        <div class="footer-top__item footer-top__contact">
-          <a class="logo footer-top__logo" href="">
-            <img class="logo__img" src="images/logo.png" alt="logo">
-          </a>
-          <a class="footer-top__address" href="#">
-            ADDRESS: 4772 Wines Lane
-            Houston, TX 77032
-          </a>
-          <a class="footer-top__phone" href="tel:+8323475843">
-            Telephone: +832-347-5843
-          </a>
-          <a class="footer-top__email" href="mailto:contact@Glee.com">
-            Email: contact@Glee.com
-          </a>
-        </div>
-        <div class="footer-top__item footer-top__nav">
-          <h6 class="footer-top__title">Services</h6>
-          <ul class="footer-top__list">
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">About us</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Return Policy</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Our Blog</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Contact Us</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Terms & Condition</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-top__item footer-top__nav">
-          <h6 class="footer-top__title">Account</h6>
-          <ul class="footer-top__list">
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Your Account</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Checkout</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Login</a>
-            </li>
-            <li class="footer-top__item">
-              <a class="footer-top__link" href="#">Register</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-top__item footer-top__item-form">
-          <h6 class="footer-top__title">Newsletter</h6>
-          <p class="footer-top__text">
-            Subscribe by our newsletter and get
-            update protidin.
-          </p>
-          <form class="footer-top__form" action="#">
-            <input class="footer-top__form-input" type="email" placeholder="Email address" required>
-            <button class="footer-top__form-btn" type="submit">Subscribe</button>
-          </form>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p class="footer-bottom__copy">
-          ©2020 CopyRight Example. All rights reserved.
-        </p>
-        <ul class="footer-bottom__list">
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Home</a>
-          </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">About</a>
-          </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Blog</a>
-          </li>
-          <li class="footer-bottom__item">
-            <a class="footer-bottom__link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </footer>
+ {% include 'app/module/_footer/_footer.html' %}
 
 
   <script src="js/main.min.js"></script>
