--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -140,9 +140,9 @@
     align-items: center;
   }
 
-  &__num-img {
+  &__num-box{
+    display: flex;
     padding-left: 60px;
-
     &:nth-child(1) {
       padding-left: 0;
     }
@@ -220,6 +220,7 @@
 
   &__info {
     max-width: 300px;
+    margin-right: 10px;
   }
 
   &__title {
@@ -256,6 +257,12 @@
     position: relative;
     box-shadow: 0px 6px 57px 0px rgba(37, 37, 37, 0.05);
 
+    &-box{
+      position: relative;
+      max-width: 320px;
+      width: 100%;
+    }
+
     &-link--instagram,
     &-link--google {
       width: 41px;
@@ -271,12 +278,12 @@
 
     &-link--instagram {
       background-image: url(../images/icons/instagram.svg);
-      right: 115px;
+      right: 75px;
     }
 
     &-link--google {
       background-image: url(../images/icons/google.svg);
-      right: 65px;
+      right: 25px;
     }
 
     &-img {
@@ -290,8 +297,9 @@
       padding-top: 20px;
       padding-left: 25px;
       position: absolute;
-      width: 325px;
-      bottom: 59px;
+      max-width: 325px;
+      width: 100%;
+      bottom: 57px;
       left: 0;
       background-color: #fff;
     }
@@ -335,6 +343,9 @@
   &__filter {
     min-width: 270px;
     margin-right: 30px;
+  }
+  &__filter-btn {
+    display: none;
   }
 }
 
@@ -486,6 +497,10 @@
   }
 }
 
+.product__item-star{
+  display: none;
+}
+
 .filter-recent {
   &__img {
     margin-right: 20px;
@@ -548,6 +563,7 @@
     justify-content: space-between;
     align-items: center;
   }
+  
 
   &__filter-buttons {
     display: flex;
@@ -827,7 +843,9 @@
     .product__item {
       display: inline-flex !important;
       height: 380px;
+      max-width: 270px;
     }
+    
   }
 
   .slick-arrow {
@@ -1241,7 +1259,7 @@
     max-width: 400px;
     width: 100%;
     border: 1px solid #e5e5e5;
-    padding: 5px 20px;
+    padding: 5px 50px 5px 20px;
     outline: none;
     color: #333;
     position: relative;
@@ -1264,7 +1282,7 @@
   &__textarea {
     width: 100%;
     resize: none;
-    padding: 5px 20px;
+    padding: 5px 50px 5px 20px;
     border: 1px solid #e5e5e5;
     height: 120px;
     margin-bottom: 30px;
@@ -1383,7 +1401,7 @@
     width: 100%;
     border: none;
     background-color: #fafafa;
-    padding: 9px 20px;
+    padding: 9px 50px 9px 20px;
     position: relative;
     background-repeat: no-repeat;
     background-position: right 20px center;
@@ -1405,7 +1423,7 @@
   &__textarea {
     width: 100%;
     resize: none;
-    padding: 9px 20px;
+    padding: 9px 50px 9px 20px;
     border: none;
     background-color: #fafafa;
     height: 175px;
